syntax = "proto3";

option java_multiple_files = true;
option java_package = "site.ycsb.db";
option java_outer_classname = "RouterProto";

package router;

service Router {
    rpc Read (ReadRequest) returns (ReadReply) {}
    rpc Write(WriteRequest) returns (WriteReply) {}
}

message ReadRequest {
    string block = 1;
}

message ReadReply {
    string value = 1;
}

message WriteRequest {
    string block = 1;
    string value = 2;
}

message WriteReply {
    bool success = 1;
}